--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "formify-horiba-interface",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder",
@@ -15,7 +16,7 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "chokidar": "^4.0.3",
-    "electron-store": "^10.0.1",
+    "electron-store": "^8.0.1",
     "fs-extra": "^11.3.0",
     "ftp-srv": "^2.19.6"
   },
