--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder",
+    "build:windows": "electron-builder --win --x64",
     "start": "npx electron ."
   },
   "keywords": [],
