--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '19'
 
       - name: Install dependencies
         run: |
@@ -27,11 +27,7 @@ jobs:
 
       - name: Build Electron app
         run: |
-          npm run build
-
-      - name: Build Windows installer
-        run: |
-          npm run release -- --win --x64
+          npm run build:windows
 
       - name: Upload Windows installer as artifact
         uses: actions/upload-artifact@v4
